<resources>
    <string name="app_name">kalkulUJ</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="numComma">,</string>
    <string name="opPlus">+</string>
    <string name="opMinus">-</string>
    <string name="opMultiply">*</string>
    <string name="opDivide">/</string>
    <string name="opEquals">=</string>
    <string name="opClear">C</string>
    <string name="startNum">0</string>
</resources>