<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="100dp">

    <Button
        android:id="@+id/num0"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#4E4747"
        android:onClick="numClicked"
        android:text="@string/num0"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/numComma"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="168dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#4E4747"
        android:onClick="commaClicked"
        android:text="@string/numComma"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="172dp"
        android:backgroundTint="#4E4747"
        android:onClick="numClicked"
        android:text="@string/num4"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num9"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="168dp"
        android:layout_marginBottom="252dp"
        android:backgroundTint="#4E4747"
        android:onClick="numClicked"
        android:text="@string/num9"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#4E4747"
        android:onClick="numClicked"
        android:text="@string/num2"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/opEquals"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="244dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#F89B08"
        android:onClick="calculate"
        android:text="@string/opEquals"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/opMultiply"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="244dp"
        android:layout_marginBottom="252dp"
        android:backgroundTint="#F89B08"
        android:onClick="operatorClicked"
        android:text="@string/opMultiply"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num8"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="252dp"
        android:backgroundTint="#4E4747"
        android:onClick="numClicked"
        android:text="@string/num8"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#4E4747"
        android:onClick="numClicked"
        android:text="@string/num1"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/opDivide"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="244dp"
        android:layout_marginBottom="332dp"
        android:backgroundTint="#F89B08"
        android:onClick="operatorClicked"
        android:text="@string/opDivide"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/opPlus"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="244dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#F89B08"
        android:onClick="operatorClicked"
        android:text="@string/opPlus"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num7"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="252dp"
        android:backgroundTint="#4E4747"
        android:onClick="numClicked"
        android:text="@string/num7"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num6"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="168dp"
        android:layout_marginBottom="172dp"
        android:backgroundTint="#4E4747"
        android:onClick="numClicked"
        android:text="@string/num6"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/opMinus"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="244dp"
        android:layout_marginBottom="172dp"
        android:backgroundTint="#F89B08"
        android:onClick="operatorClicked"
        android:text="@string/opMinus"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num5"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="172dp"
        android:backgroundTint="#4E4747"
        android:onClick="numClicked"
        android:text="@string/num5"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/outputField"
        android:layout_width="295dp"
        android:layout_height="92dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="404dp"
        android:text="@string/startNum"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="64sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/opClear"
        android:layout_width="216dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="332dp"
        android:backgroundTint="#B3AFAF"
        android:onClick="clearClicked"
        android:text="@string/opClear"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="168dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#4E4747"
        android:onClick="numClicked"
        android:text="@string/num3"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>